[tool.poetry]
name = "hello-world"
version = "0.1.0"
description = "Leaf Adapter with a basic Hello World function. Creating a hello world message every minute "
authors = ["Jasper Koehorst <jasper.koehorst@wur.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
leaf = {git = "https://gitlab.com/LabEquipmentAdapterFramework/leaf.git", rev = "dev"}

[tool.poetry.plugins."leaf.adapters"]
hello_world = "hello_world.adapter:HelloWorldAdapter"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
